# Eurecar_steering

load_waypoint/: CMakeLists.txt  package.xml
load_waypoint/include/load_waypoint/: load_waypoint.hpp
load_waypoint/launch/: load_path.launch
load_waypoint/src/: load_waypoint_node.cpp
load_waypoint/waypoint_files/: .fire_example.txt.swp  fire_example.txt  utm_points.txt
usrg_path_tracking/: CMakeLists.txt  package.xml
usrg_path_tracking/include/usrg_path_tracking/: quintic_polynomials.hpp
usrg_path_tracking/launch/: path_tracker.launch
usrg_path_tracking/rviz_config/: mbzirc.rviz
usrg_path_tracking/src/: usrg_path_tracking_node.cpp
usrg_path_tracking/waypoint_files/: utm_points.txt
